Autocomplete from mui to filter locations by country - map now shows the filtered locations only

--- a/src/assets/styles/cmps/SearchStore.scss
+++ b/src/assets/styles/cmps/SearchStore.scss
@@ -1,6 +1,13 @@
 .search-store-container {
-    width: 15vw;
+    width: 20%;
+    min-width: 200px;
     height: 100%;
-    background-color: blue;
-    border-right: 2px solid black;
+    background-color: white;
+    padding: 1rem;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+
 }
