--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -12,7 +12,9 @@
 @import "base/_layout";
 
 // // COMPONENTS
+@import "cmps/Header";
 @import "cmps/SearchStore";
+@import "cmps/StoresMap";
 
 // //PAGES
 @import "pages/HomePage";
