--- a/src/assets/styles/cmps/SearchStore.scss
+++ b/src/assets/styles/cmps/SearchStore.scss
@@ -8,6 +8,5 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: center;
-
+    // align-items: center;
 }
