--- a/src/assets/styles/cmps/SearchStore.scss
+++ b/src/assets/styles/cmps/SearchStore.scss
@@ -3,10 +3,18 @@
     min-width: 200px;
     height: 100%;
     background-color: white;
-    padding: 1rem;
+    padding: 1.5rem;
 
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     // align-items: center;
+
+    .country-details{
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        font-size: 1.1rem;
+        font-family: sans-serif;
+    }
 }
