--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -13,7 +13,7 @@
 
 // // COMPONENTS
 @import "cmps/Header";
-@import "cmps/SearchStore";
+@import "cmps/SearchCountry";
 @import "cmps/StoresMap";
 
 // //PAGES
