Added store list on the side when selecting a country

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -15,6 +15,8 @@
 @import "cmps/Header";
 @import "cmps/SearchCountry";
 @import "cmps/StoresMap";
+@import "cmps/StoreList";
+@import "cmps/StorePreview";
 
 // //PAGES
 @import "pages/HomePage";
