--- a/src/assets/styles/base/_base.scss
+++ b/src/assets/styles/base/_base.scss
@@ -2,12 +2,10 @@
   box-sizing: border-box;
 }
 
-// html {
-//   font-family: var(--font-family);
-//   background-color: var(--primary-background-color);
-//   color: var(--primary-text-color);
-//   line-height: 1.15;
-// }
+html {
+  font-family: sans-serif;
+  line-height: 1.15;
+}
 
 body {
   margin: 0;
