--- a/src/assets/styles/cmps/SearchCountry.scss
+++ b/src/assets/styles/cmps/SearchCountry.scss
@@ -7,14 +7,14 @@
 
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    gap: 2rem;
+    // justify-content: space-between;
     // align-items: center;
 
-    .country-details{
+    .country-details {
         display: flex;
         flex-direction: column;
         gap: 1rem;
         font-size: 1.1rem;
-        font-family: sans-serif;
     }
 }
