Added alert success and error msgs

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -17,6 +17,7 @@
 @import "cmps/StoresMap";
 @import "cmps/StoreList";
 @import "cmps/StorePreview";
+@import "cmps/AlertMsg";
 
 // //PAGES
 @import "pages/HomePage";
