Media query and color variables

--- a/src/assets/styles/cmps/Header.scss
+++ b/src/assets/styles/cmps/Header.scss
@@ -6,8 +6,7 @@
     z-index: 10;
     display: flex;
     align-items: center;
-    background-color: white;
-    color: #000000de;
+    background-color: $primary-background-color;
     padding-inline: 3rem;
     box-shadow: 0 1px 3px #0000001a, 0 2px 2px #0000000f, 0 0 2px #00000012;
 
