--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -19,3 +19,7 @@
 @import "pages/HomePage";
 
 //MQ
+@import "Mqs/HeaderMq";
+@import "Mqs/HomePageMq";
+@import "Mqs/StoresMapMq";
+@import "Mqs/SearchCountryMq";
