Implemented Light/Dark mode and a mui switch button to control it

--- a/src/assets/styles/base/base.scss
+++ b/src/assets/styles/base/base.scss
@@ -5,7 +5,9 @@
 html {
   font-family: sans-serif;
   line-height: 1.15;
-  color: $primary-text-color;
+  // color: $primary-text-color;
+  color: var(--primary-text-color);
+
 }
 
 body {
